# Python_for_DS

./: .gitignore
Python-0/: .gitignore  requirements.txt  test.py
Python-0/ex00/: Hello.py
Python-0/ex01/: format_ft_time.py
Python-0/ex02/: find_ft_type.py
Python-0/ex03/: NULL_not_found.py
Python-0/ex04/: whatis.py
Python-0/ex05/: building.py
Python-0/ex06/: filterstring.py  ft_filter.py
Python-0/ex07/: sos.py
Python-0/ex08/: Loading.py
Python-0/ex09/: LICENSE  pyproject.toml
Python-0/ex09/ft_package/: __init__.py
Python-1/: requirements.txt
Python-1/ex00/: give_bmi.py  test.py
Python-1/ex01/: array2D.py
Python-1/ex02/: load_image.py
Python-1/ex03/: load_image.py  zoom.py
Python-1/ex04/: load_image.py  rotate.py
Python-1/ex05/: load_image.py  pimp_image.py  tester.py
Python-2/ex01/: .~lock.life_expectancy_years.csv#  aff_life.py
Python-2/ex02/: aff_pop.py  load_csv.py
Python-2/ex03/: projection_life.py
Python-3/: oop_basics.py
Python-3/ex00/: S1E9.py  tester.py
Python-3/ex01/: S1E7.py  S1E9.py
Python-3/ex02/: DiamondTrap.py  S1E7.py  S1E9.py
Python-3/ex03/: ft_calculator.py
Python-3/ex04/: ft_calculator.py
